--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   lottie: ^3.3.1
   flutter_staggered_animations: ^1.1.1
+  font_awesome_flutter: ^10.9.1
+  replog_icons: ^0.0.3
 
 syncfusion_flutter_charts:
   git:
